--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -38,6 +38,9 @@
     ]
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.16",
     "json-server": "^0.17.3"
-  }
+  },
+
+  "proxy": "http://localhost:3001"
 }
